added cache control headers, modified accent color for contrast readability, linked form labels, and transitioned footer images to webp from png

--- a/public/index.html
+++ b/public/index.html
@@ -101,11 +101,11 @@
                     <img src="/assets/img/sectionDividerLine.svg" alt="Section divider" />
                 </div>
                 <p>
-                    Hi!  I'm Connor!  I'm a full stack software engineer from Woodside, CA studying Computer Science at the University of California, Berkeley.
-                    As far as software development goes, I've been passionate about the trade dating all the way back to when I was 7 - yep I have been a complete
-                    tech nerd for my entire life, and I wouldn't have it any other way.  All that said, my life is far from just computers!  Besides software development,
-                    I am super passionate about photography, psychology, cars, LGBTQ community engagement, weightlifting, music, and travel.  If you're interested in
-                    my profile or just want to say hello, please do so <a href="#Contact">here</a>!  I look forward to hearing from you!
+                    Hi!  I'm Connor!  Welcome to my personal website!  I'm a full stack software engineer from Woodside, CA studying Computer Science at the 
+                    University of California, Berkeley.  As far as software development goes, I've been passionate about the trade dating all the way back to when I was 7 
+                    - yep I have been a complete tech nerd for my entire life, and I wouldn't have it any other way.  All that said, my life is far from just computers!  
+                    Besides software development, I am super passionate about photography, psychology, cars, LGBTQ community engagement, weightlifting, music, and travel.  
+                    If you're interested in my profile or just want to say hello, please do so <a href="#Contact">here</a>!  I look forward to hearing from you!
                 </p>
             </div>
             <div class="iconSection">
@@ -113,7 +113,7 @@
                 <div language class="icons">
                     <template iconTemplate>
                         <div class="icon">
-                            <img src="Source Location" alt="Language Icon" />
+                            <img src="Source Location" alt="Language Icon" loading="lazy" />
                             <p>Language Name</p>
                         </div>
                     </template>
@@ -124,7 +124,7 @@
                 <div utility class="icons">
                     <template iconTemplate>
                         <div class="icon">
-                            <img src="Source Location" alt="Utility Icon" />
+                            <img src="Source Location" alt="Utility Icon" loading="lazy" />
                             <p>Language Name</p>
                         </div>
                     </template>
@@ -150,7 +150,7 @@
                                 <div class="fakeNavBarItem green"></div>
                             </div>
                             <img class="experienceLogo" src="COMPANY IMAGE" />
-                            <h3>Title</h3>
+                            <h3>Experience Item Title</h3>
                             <ul>
                                 <template experienceSubItemTemplate>
                                     <li>
@@ -181,7 +181,7 @@
                 <template portfolioItemTemplate>
                     <div class="rainbowBorder">
                         <div class="portfolioItem">
-                                <h3>Title</h3>
+                                <h3>Portfolio Item Title</h3>
                                 <p>Lorem ipsum dolor sit amet consectetur. Et phasellus in semper enim cursus eu. Sed amet ac netus aliquet. Felis dui ac
                                 id mollis neque leo donec eleifend donec. Accumsan leo pellentesque tellus diam etiam arcu eget tempor. Vitae et tellus
                                 maecenas donec blandit tortor ligula quis integer.</p>
@@ -206,20 +206,20 @@
                 <div id="formIntro">
                     <div class="shortInputs">
                         <div class="inputBox">
-                            <input type="text" name="firstName" required="true" />
-                            <label><strong>* </strong>First Name</label>
+                            <input type="text" name="firstName" id="contactFirstName" required="true" />
+                            <label for="contactFirstName"><strong>* </strong>First Name</label>
                         </div>
                         <div class="inputBox">
-                            <input type="text" name="lastName" required="true" />
-                            <label><strong>* </strong>Last Name</label>
+                            <input type="text" name="lastName" id="contactLastName" required="true" />
+                            <label for="contactLastName"><strong>* </strong>Last Name</label>
                         </div>
                         <div class="inputBox">
-                            <input type="text" name="email" required="true" />
-                            <label><strong>* </strong>Email</label>
+                            <input type="text" name="email" id="contactEmail" required="true" />
+                            <label for="contactEmail"><strong>* </strong>Email</label>
                         </div>
                         <div class="inputBox">
-                            <input type="text" name="phone" required="false" />
-                            <label>Phone Number</label>
+                            <input type="text" name="phone" id="contactPhone" required="false" />
+                            <label for="contactPhone">Phone Number</label>
                         </div>
                     </div>
                 </div>
@@ -238,16 +238,16 @@
                 <div class="hfContent">
                     <div class="socialIcons">
                         <a href="https://github.com/Connor-Bernard">
-                            <img src="/assets/img/socialIcons/Github Logo.png" alt="GitHub access link">
+                            <img src="/assets/img/socialIcons/Github Logo.webp" alt="GitHub access link" loading="lazy" />
                         </a>
                         <a href="https://www.linkedin.com/in/connorbernard/">
-                            <img src="/assets/img/socialIcons/Linkedin Logo.png" alt="LinkedIn access link">
+                            <img src="/assets/img/socialIcons/Linkedin Logo.webp" alt="LinkedIn access link" loading="lazy" />
                         </a>
                         <a href="https://bitbucket.org/connor-bernard/">
-                            <img src="/assets/img/socialIcons/Bitbucket Logo.png" alt="BitBucket access link">
+                            <img src="/assets/img/socialIcons/Bitbucket Logo.webp" alt="BitBucket access link" loading="lazy" />
                         </a>
                         <a href="mailto:connor@connorbernard.dev">
-                            <img src="/assets/img/socialIcons/Mail Symbol.png" alt="Email access link">
+                            <img src="/assets/img/socialIcons/Mail Symbol.webp" alt="Email access link" loading="lazy" />
                         </a>
                     </div>
                     <nav class="footerNav">
