--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="description" content="Personal website for Connor Bernard, Software Developer.  Check out his portfolio here!" />
+        <meta name="keywords" , content="Connor Bernard, Connor, Bernard, Software Developer, Software Engineer" />
         <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
         <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
@@ -34,7 +35,7 @@
         <header>
             <div class="hfContent">
                 <div class="logo">
-                    <a href="#top"><img src="/assets/img/logo.svg" alt="Logo" height=65px /></a>
+                    <a href="#top"><img src="/assets/img/logo.svg" alt="Connor Bernard Signature Logo" height=65px /></a>
                 </div>
                 <div class="hamburger">
                     <span class="bar"></span>
@@ -283,6 +284,7 @@
         <!-- <script src="/assets/js/master.js" defer></script> -->
         <script src="/assets/js/index.js"></script>
         <script src="/assets/js/noframework.waypoints.min.js" defer></script>
+        <!-- <script src="/assets/js/contact.js" type="module" defer></script> -->
         <script src="/assets/js/contact-min.js" type="module" defer></script>
         <script src="/assets/js/waypoints-min.js" defer></script>
         <!-- <script src="/assets/js/experience.js" defer></script>
