updated experience and projects and fixed rainbow border size

--- a/public/index.html
+++ b/public/index.html
@@ -9,13 +9,13 @@
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
         <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
         <link rel="manifest" href="/manifest.json" />
-        <link rel="stylesheet" href="/assets/css/index.css" />
-        <!-- <link rel="stylesheet" href="/assets/css/master.css" />
+        <!-- <link rel="stylesheet" href="/assets/css/index.css" /> -->
+        <link rel="stylesheet" href="/assets/css/master.css" />
         <link rel="stylesheet" href="/assets/css/hello.css" />
         <link rel="stylesheet" href="/assets/css/about.css" />
         <link rel="stylesheet" href="/assets/css/experience.css" />
         <link rel="stylesheet" href="/assets/css/portfolio.css">
-        <link rel="stylesheet" href="/assets/css/contact.css" /> -->
+        <link rel="stylesheet" href="/assets/css/contact.css" />
         <title>Connor Bernard</title>
     </head>
     <body>
@@ -281,13 +281,13 @@
                 </div>
             </footer>
         </div>
-        <!-- <script src="/assets/js/master.js" defer></script> -->
+        <!-- <script src="/assets/js/master.js" defer></script>
+        <script src="/assets/js/experience.js" defer></script>
+        <script src="/assets/js/portfolio.js" defer></script> -->
         <script src="/assets/js/index.js"></script>
-        <script src="/assets/js/noframework.waypoints.min.js" defer></script>
         <!-- <script src="/assets/js/contact.js" type="module" defer></script> -->
         <script src="/assets/js/contact-min.js" type="module" defer></script>
+        <script src="/assets/js/noframework.waypoints.min.js" defer></script>
         <script src="/assets/js/waypoints-min.js" defer></script>
-        <!-- <script src="/assets/js/experience.js" defer></script>
-        <script src="/assets/js/portfolio.js" defer></script> -->
     </body>
 </html>
