added js compression script and updated experience

--- a/public/index.html
+++ b/public/index.html
@@ -131,7 +131,6 @@
                     </template>
                 </div>
             </div>
-            <script src="/assets/js/icons-min.js" type="module"></script>
             <span id="AboutMeUp"></div>
         </section>
 
@@ -281,13 +280,14 @@
                 </div>
             </footer>
         </div>
-        <!-- <script src="/assets/js/master.js" defer></script>
+        <!-- <script src="/assets/js/index.js" defer></script>
         <script src="/assets/js/experience.js" defer></script>
         <script src="/assets/js/portfolio.js" defer></script> -->
-        <script src="/assets/js/index.js"></script>
+        <script src="/assets/js/master.min.js"></script>
         <!-- <script src="/assets/js/contact.js" type="module" defer></script> -->
-        <script src="/assets/js/contact-min.js" type="module" defer></script>
+        <script src="/assets/js/contact.min.js" type="module" defer></script>
         <script src="/assets/js/noframework.waypoints.min.js" defer></script>
-        <script src="/assets/js/waypoints-min.js" defer></script>
+        <script src="/assets/js/waypoints.min.js" defer></script>
+        <script src="/assets/js/icons.min.js" type="module"></script>
     </body>
 </html>
