feat: add class list and cs169a notes

--- a/public/index.html
+++ b/public/index.html
@@ -19,23 +19,11 @@
         <title>Connor Bernard</title>
     </head>
     <body>
-        <!-- <div class="blur" id="blur1">
-            <img src="/assets/img/blurGradients/blur1.png">
-        </div>
-        <div class="blur" id="blur2">
-            <img src="/assets/img/blurGradients/blur2.png">
-        </div>
-        <div class="blur" id="blur3">
-            <img src="/assets/img/blurGradients/blur3.png">
-        </div>
-        <div class="blur" id="blur4">
-            <img src="/assets/img/blurGradients/blur4.png">
-        </div> -->
         <div id="loaderPage"><span id="loader"></span></div>
         <header>
             <div class="hfContent">
                 <div class="logo">
-                    <a href="#top"><img src="/assets/img/logo.svg" alt="Connor Bernard Signature Logo" height=65px /></a>
+                    <a href="/#top"><img src="/assets/img/logo.svg" alt="Connor Bernard Signature Logo" height=65px /></a>
                 </div>
                 <div class="hamburger">
                     <span class="bar"></span>
@@ -45,22 +33,27 @@
                 <nav class="headerNav">
                     <div class="rainbowHover">
                         <div class="navItem">
-                            <a href="#AboutMe">About Me</a>
+                            <a href="/classes">Classes</a>
                         </div>
                     </div>
                     <div class="rainbowHover">
                         <div class="navItem">
-                            <a href="#Experience">Experience</a>
+                            <a href="/#AboutMe">About Me</a>
                         </div>
                     </div>
                     <div class="rainbowHover">
                         <div class="navItem">
-                            <a href="#Portfolio">Portfolio</a>
+                            <a href="/#Experience">Experience</a>
                         </div>
                     </div>
                     <div class="rainbowHover">
                         <div class="navItem">
-                            <a href="#Contact">Contact</a>
+                            <a href="/#Portfolio">Portfolio</a>
+                        </div>
+                    </div>
+                    <div class="rainbowHover">
+                        <div class="navItem">
+                            <a href="/#Contact">Contact</a>
                         </div>
                     </div>
                 </nav>
@@ -233,7 +226,7 @@
             </form>
         </section>
 
-        <div style="position: relative; height:90px;">
+        <div style="position: relative; height:90px;"></div>
             <footer>
                 <div class="hfContent">
                     <div class="socialIcons">
@@ -279,7 +272,6 @@
                     </nav>
                 </div>
             </footer>
-        </div>
         <!-- <script src="/assets/js/index.js" defer></script>
         <script src="/assets/js/experience.js" defer></script>
         <script src="/assets/js/portfolio.js" defer></script> -->
