fix: make all list items consistent size

--- a/public/classes/index.html
+++ b/public/classes/index.html
@@ -62,12 +62,12 @@
         </div>
         <div id="classList" class="itemListContainer">
             <template ListItemTemplate class="classes">
-                <div class="listItem rainbowBorder clickable">
-                    <div class="listItemContents">
-                            <h3 class="itemTitle">Note Item Title</h3>
-                            <p class="itemBody">Lorem ipsum dolor sit amet consectetur. Et phasellus in semper enim cursus eu. Sed amet ac netus aliquet. Felis dui ac
-                            id mollis neque leo donec eleifend donec. Accumsan leo pellentesque tellus diam etiam arcu eget tempor. Vitae et tellus
-                            maecenas donec blandit tortor ligula quis integer.</p>
+                <div class="listItem rainbowBorder">
+                    <div class="listItemContents clickable">
+                        <h3 class="itemTitle">Note Item Title</h3>
+                        <p class="itemBody">Lorem ipsum dolor sit amet consectetur. Et phasellus in semper enim cursus eu. Sed amet ac netus aliquet. Felis dui ac
+                        id mollis neque leo donec eleifend donec. Accumsan leo pellentesque tellus diam etiam arcu eget tempor. Vitae et tellus
+                        maecenas donec blandit tortor ligula quis integer.</p>
                         <div class="pillBox">
                             <template PillTemplate>
                                 <div class="pill">tag</div>
