--- a/public/index.html
+++ b/public/index.html
@@ -174,14 +174,15 @@
                 <template portfolioItemTemplate>
                     <div class="rainbowBorder">
                         <div class="portfolioItem">
-                                <h3>Portfolio Item Title</h3>
-                                <p>Lorem ipsum dolor sit amet consectetur. Et phasellus in semper enim cursus eu. Sed amet ac netus aliquet. Felis dui ac
-                                id mollis neque leo donec eleifend donec. Accumsan leo pellentesque tellus diam etiam arcu eget tempor. Vitae et tellus
-                                maecenas donec blandit tortor ligula quis integer.</p>
+                            <h3>Portfolio Item Title</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur. Et phasellus in semper enim cursus eu. Sed amet ac netus aliquet. Felis dui ac
+                            id mollis neque leo donec eleifend donec. Accumsan leo pellentesque tellus diam etiam arcu eget tempor. Vitae et tellus
+                            maecenas donec blandit tortor ligula quis integer.</p>
                             <div class="languages">
                                 <template languageBoxTemplate>
                                     <div class="language">Language</div>
                                 </template>
+                            </div>
                         </div>
                     </div>
                 </template>
